test/ClangImporter/Inputs/custom-modules/RedeclaredProperties/RPFirst.h
@@ -1,4 +1,8 @@
-@interface RPFoo
+@protocol RPProto
+- (nullable id)accessorInProto;
+@end
+
+@interface RPFoo <RPProto>
 @property (readonly, nonnull) int *nonnullToNullable;
 @property (readonly, nullable) int *nullableToNonnull;
 @property (readonly, nonnull) id typeChangeMoreSpecific;
@@ -9,4 +13,10 @@
 
 - (nullable id)accessorDeclaredFirstAsNullable;
 @property (readonly, nonnull) id accessorDeclaredFirstAsNullable;
+
+@property (readonly, nullable) id accessorInProto;
+@end
+
+@interface RPBase <RPProto>
+@property (readonly, nonatomic, nullable) id accessorInProto;
 @end
